# RC

./: ID_test.go  IP.txt  IP1.txt  IP2.txt  IP3.txt  IP4.txt  IPP.txt  IPp.txt  IPp1.txt  IPp2.txt  IPp3.txt  IpAddr.txt  IpAddr1.txt  IpAddr2.txt  IpAddr3.txt  Local.go  Local_test.go  README.md  RepBlockchain.db  command.txt  debug  main.go  main_back.txt  test.go  testip.txt
HE/: CMakeLists.txt  paillier.c  paillier.h  paillier_mh.c  paillier_mh.h  test.c
NewRep/: RepBlock.go  RepMsg.go  RepProcess.go
Reputation/: ProofOfWork.go  RepBlock.go  RepBlockChain.go  RepTransaction.go  SyncBlock.go  SyncRepTransaction.go  Utils.go  cli.go  rep_variable.go
Reputation/cosi/: sign.go  verify.go
account/: account.go
basic/: TxDecSS.go  TxDecSet.go  TxDecSetX.go  TxDecision.go  TxList.go  TxListX.go  block.go  blockX.go  parameter.go  service.go  service_test.go  sign.go  struct.go  tool.go  tx.go  txDatabase.go  utxo.go
crypto/: signature_gen.go
cryptonew/: signature_gen.go
ed25519/: ed22519.go
gVar/: global_variable.go
protocol/: CoSiProtocol.go
rccache/: 0TxBlockchain.db  2TxBlockchain.db  3TxBlockchain.db  cache.go  cache_leader.go  cache_miner.go  cache_rep.go  getPacket.go  rccache_test.go  tool.go  txBlockChain.go  txDatabase.go
shard/: shard_func.go  shard_func_test.go  shard_struct.go  shard_variable.go
testforclient/: PriKeys.txt  main.go
testforclient/LocalServerFile/: Local.go
testforclient/client0/: client0.go
testforclient/client1/: client1.go
testforclient/client2/: client2.go
testforclient/client3/: client3.go
treap/: treap.go
(+21 files in other folders)
